# hylreg_LLM

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: hylreg-LLM.mdc
RAG/: BENCHMARK.md  DEPLOY_RERANKER.md  README.md  benchmark.py  example.py  example_local_reranker.py  example_ollama.py  example_ollama_reranker.py  rag_system.py
agents/: README.md  __init__.py  agent_system.py  example.py
demo/: README.md  __init__.py
demo/RAG/: .gitignore  README.md  __init__.py  benchmark.py  example.py  example_local_reranker.py  example_modelscope_reranker.py  example_ollama.py  example_ollama_reranker.py  pyproject.toml
demo/RAG/documents/: sample.txt
demo/agents/: README.md  agent_system.py  example.py  pyproject.toml
demo/vl_demo/: README.md  __init__.py  pyproject.toml  run_vl_demo.py  视觉语言Demo方案.md
demo/vl_demo/vl/: __init__.py  client.py
demo/vl_demo/vl_demo/: __init__.py
demo/voice_assistant/: README.md  __init__.py  pyproject.toml  run_voice_assistant.py  语音助手方案.md
demo/voice_assistant/audio/: __init__.py  asr.py
demo/voice_assistant/core/: __init__.py  pipeline.py
demo/voice_assistant/llm/: __init__.py  client.py
demo/voice_assistant/voice_assistant/: __init__.py  llm_client.py  pipeline.py  tts.py
docs/: OLLAMA_RERANKER_DEPLOY.md  README.md  量化使用指南.md  魔搭模型下载指南.md
docs/rag/: BENCHMARK.md  DEPLOY_RERANKER.md  README.md  VECTOR_STORE.md
examples/agents/: __init__.py  example.py
examples/rag/: __init__.py  benchmark.py  example.py  example_local_reranker.py  example_modelscope.py  example_modelscope_reranker.py  example_ollama.py  example_ollama_reranker.py
scripts/: download_qwen_reranker.py  fix_imports.py  main.py
