[project]
name = "hylreg-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "langchain-ollama>=0.1.0",
    "langchain-cohere>=0.1.0",
    "langchain-core>=0.1.0",
    "faiss-cpu>=1.7.4",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "cohere>=4.0.0",
    "FlagEmbedding>=1.2.0",
    "torch>=2.0.0",
]
