[project]
name = "hylreg-llm-workspace"
version = "0.1.0"
description = "LLM Demo 工作区：包含多个子项目"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["demo/vl_demo", "demo/voice_assistant", "demo/agents", "demo/RAG"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
