[project]
name = "vl-demo"
version = "0.1.0"
description = "视觉语言 Demo：图片 + 问题 → VL 模型回复"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.7.4",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "FlagEmbedding>=1.2.0",
    "torch>=2.0.0",
    "requests>=2.31.0",
    "modelscope>=1.9.0",
    "transformers>=4.30.0",
]

[project.scripts]
vl-demo = "run_vl_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 扁平布局：项目根即 vl_demo 包，映射到 wheel 内 vl_demo/
sources = {"": "vl_demo"}

[tool.hatch.build]
# 可编辑安装时把父目录加入 path，使 import vl_demo 解析为当前目录
dev-mode-dirs = [".."]
