[project]
name = "voice-assistant"
version = "0.1.0"
description = "语音助手 Demo：ASR → LLM → TTS（当前为文本模式）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.7.4",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "FlagEmbedding>=1.2.0",
    "torch>=2.0.0",
    "requests>=2.31.0",
    "modelscope>=1.9.0",
    "transformers>=4.30.0",
]

[project.scripts]
voice-assistant = "run_voice_assistant:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 扁平布局：项目根即 voice_assistant 包，映射到 wheel 内 voice_assistant/
sources = {"": "voice_assistant"}

[tool.hatch.build]
# 可编辑安装时把父目录加入 path，使 import voice_assistant 解析为当前目录
dev-mode-dirs = [".."]
